ode4j CHANGELOG
---------------

the rules for this file:
  * entries are sorted newest-first.
  * summarise sets of changes.
  * don't ever delete anything.
  * keep the format consistent (79 char width, YYYY-MMM-DD date format).

------------------------------------------------------------------------------

2012-Jul-11 Tilmann Zaschke
		* Fixed NPE in DxGeom (dropping composite in DemoTrimesh)

2012-Jun-29 Tilmann Zaschke
		* Web page updates


		   ******************************************************************
2012-Jun-05 Tilmann Zaschke
		* Release of ode4j-0.12.0-j1.2
		   ******************************************************************

2012-Jun-08 Tilmann Zaschke
		* Fixed broken MPRBoxBox test.
		* Improved performance of vec3/quat classes
		* Fixed GJK collider. All tests run fine now.
		* Improved performance of CCDSimplex a bit.


		   ******************************************************************
2012-Jun-05 Tilmann Zaschke
		* Release of ode4j-0.12.0-j1.1
		   ******************************************************************

2012-Jun-05 Tilmann Zaschke
		* Added missing LIBCCD tests.
		* Fixed (improved?) LIBCCD ccd_list_t iteration

2012-Jun-04 Tilmann Zaschke
		* Added port of LIBCCD. Can be enabled via OdeConfig.setLIBCCDEnabled()

		   ******************************************************************
2012-Jun-02 Tilmann Zaschke
		* Release of ode4j-0.12.0-j1.0
		   ******************************************************************

2012-Jun-02 Tilmann Zaschke
		* Migration to ode-0.12:
		  - Identified failing test (is because of GIMPACT)
		SUMMARY of changes for ode-0.12
		- Refactoring of OdeMath method names
		- Refactoring of OdeMath super-classes Matrix->DMatrix, ...
		- new functions in DGeom
		- Quickstep refactored and sped up
		- Clean-up of demos
		- New TrackDemo
		- Bug fixes


2012-May-29 Tilmann Zaschke
		* Migration to ode-0.12:
		  - Fixed NPE in Step.java (e.g. DemoChain1)