@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <meta name="google-site-verification" content="dAjKqKTPDfTJBoFcbK2q23LKv1KTRF1sMQE0_RHFhFQ" />
-    <meta content="text/html;charset=UTF-8" http-equiv="Content-Type" />
+    <meta content="dAjKqKTPDfTJBoFcbK2q23LKv1KTRF1sMQE0_RHFhFQ" name="google-site-verification" />
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
     <title>ode4j</title>
-    <meta name="keywords" content="ode4j,ode,Java,libccd,3D,physics,engine,library,dynamics" />
+    <meta content="ode4j,ode,Java,libccd,3D,physics,engine,library,dynamics" name="keywords" />
   </head>
   <body bgcolor="#E0E0E0">
     <table border="0" style="width: 1200px;">
@@ -17,7 +17,7 @@
               style="width: 100%;">
               <tbody>
                 <tr>
-                  <td bgcolor="#E0E0E0" align="left" colspan="5" style="text-align: left;">
+                  <td bgcolor="#E0E0E0" align="left" style="text-align: left;" colspan="5">
                     <p align="center"><font face="Helvetica, Arial, sans-serif"><big><big
                             style="font-weight: bold;"><big>ode4j</big></big></big></font></p>
                     <p align="center"><font face="Helvetica, Arial, sans-serif"><big><big
@@ -30,30 +30,30 @@
                 </tr>
                 <tr style="background-color: #e0e0e0;">
                   <td bgcolor="#FFFFFF" align="center" style="width: 20%;"> <font
-                      face="Helvetica, Arial, sans-serif"> <a style="color: #000000;text-decoration:none"
-                        href="index.html">About</a><br />
+                      face="Helvetica, Arial, sans-serif"> <a href="index.html"
+                        style="color: #000000;text-decoration:none">About</a><br />
                     </font> </td>
                   <td align="center" style="width: 20%;"> <font face="Helvetica, Arial, sans-serif">
-                      <a style="color: #000000;text-decoration:none" href="ode4j-features.html">Features</a><br />
+                      <a href="ode4j-features.html" style="color: #000000;text-decoration:none">Features</a><br />
                     </font> </td>
                   <td align="center" style="width: 20%;"><font face="Helvetica, Arial, sans-serif"><a
-                        style="color: #000000;text-decoration:none" href="ode4j-doc.html">Documentation</a><br />
+                        href="ode4j-doc.html" style="color: #000000;text-decoration:none">Documentation</a><br />
                     </font> </td>
                   <td align="center" style="width: 20%;"><font face="Helvetica, Arial, sans-serif"><a
-                        style="color: #000000;text-decoration:none" href="ode4j-download.html">Download</a><br />
+                        href="ode4j-download.html" style="color: #000000;text-decoration:none">Download</a><br />
                     </font> </td>
                   <td align="center" style="width: 20%;"><font face="Helvetica, Arial, sans-serif"><a
-                        style="color: #000000;text-decoration:none" href="ode4j-contact.html">Contact</a><br />
+                        href="ode4j-contact.html" style="color: #000000;text-decoration:none">Contact</a><br />
                     </font> </td>
                 </tr>
                 <tr style="background-color: #e0e0e0;">
-                  <td bgcolor="#FFFFFF" align="left" colspan="5" style="text-align: left;">
+                  <td bgcolor="#FFFFFF" align="left" style="text-align: left;" colspan="5">
                     <font face="Helvetica, Arial, sans-serif">
                       <h3>About</h3>
                       The ode4j project aims to provide a continuous Java port
-                      of the <a href="http://www.ode.org/" title="ODE">ODE</a>
-                      physics engine including <a href="http://gimpact.sourceforge.net/"
-                        title="GIMPACT">GIMPACT</a> and <a href="http://libccd.danfis.cz/">libccd</a>.
+                      of the <a title="ODE" href="http://www.ode.org/">ODE</a>
+                      physics engine including <a title="GIMPACT" href="http://gimpact.sourceforge.net/">GIMPACT</a>
+                      and <a href="http://libccd.danfis.cz/">libccd</a>.
                       <p></p>
                       About the ODE physics engine (cited from their home page):
                       <br />
@@ -70,6 +70,19 @@
                         Latest News</h3>
                     </font>
                     <ul>
+                      <li><font face="Helvetica, Arial, sans-serif">2012-07-21<br />
+                          Released <a href="https://sourceforge.net/projects/ode4j/files/">ode4j-0.12.0-j1.3</a><br />
+                        </font> </li>
+                      <ul>
+                        <li><font face="Helvetica, Arial, sans-serif">Fixed
+                            NullPointerException when dropping composite geoms
+                            in DemoTrimesh.</font></li>
+                        <li><font face="Helvetica, Arial, sans-serif">Fixed <code>destroy()</code>
+                            to not crash and to clean up objects properly.
+                            Please always <code>destroy()</code> your geoms to
+                            prevent memory leaks!<br />
+                          </font></li>
+                      </ul>
                       <li><font face="Helvetica, Arial, sans-serif">2012-06-08<br />
                           Released <a href="https://sourceforge.net/projects/ode4j/files/">ode4j-0.12.0-j1.2</a><br />
                         </font> </li>
@@ -228,10 +241,10 @@ parameters
                           broken as well.<br />
                           I intend to make the next release once the bugs are
                           fixed.<br />
-                          <span style="font-style: italic;" title="ode4j - A Java Port Of           The ODE 3D Physics Engine &amp; Library"></span></font>
-                      </li>
-                      <li><font face="Helvetica, Arial, sans-serif"><span style="font-style: italic;"
-                            title="ode4j - A Java Port           Of The ODE 3D Physics Engine &amp; Library">2009</span>-11-11<br />
+                          <span title="ode4j - A Java Port Of           The ODE 3D Physics Engine &amp; Library"
+                            style="font-style: italic;"></span></font> </li>
+                      <li><font face="Helvetica, Arial, sans-serif"><span title="ode4j - A Java Port           Of The ODE 3D Physics Engine &amp; Library"
+                            style="font-style: italic;">2009</span>-11-11<br />
                           Some minor updates to the home page, including some
                           new screenshots.<br />
                         </font> </li>
