@@ -1,9 +1,9 @@
 <!--?xml version="1.0" encoding="UTF-8"?-->
 <!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <meta content="text/html;charset=UTF-8" http-equiv="Content-Type" />
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
     <title>ode4j</title>
-    <meta name="keywords" content="ode4j,ode,Java,libccd,3D,physics,engine,library,dynamics" />
+    <meta content="ode4j,ode,Java,libccd,3D,physics,engine,library,dynamics" name="keywords" />
   </head>
   <body bgcolor="#E0E0E0">
     <table border="0" style="width: 1200px;">
@@ -16,7 +16,7 @@
               style="width: 100%;">
               <tbody>
                 <tr>
-                  <td bgcolor="#E0E0E0" align="left" colspan="5" style="text-align: left;">
+                  <td bgcolor="#E0E0E0" align="left" style="text-align: left;" colspan="5">
                     <p align="center"><font face="Helvetica, Arial, sans-serif"><big><big
                             style="font-weight: bold;"><big>ode4j</big></big></big></font></p>
                     <p align="center"><font face="Helvetica, Arial, sans-serif"><big><big
@@ -29,24 +29,24 @@
                 </tr>
                 <tr style="background-color: #e0e0e0;">
                   <td align="center" style="width: 20%;"> <font face="Helvetica, Arial, sans-serif">
-                      <a href="index.html" style="color: #000000;text-decoration:none">About</a><br />
+                      <a style="color: #000000;text-decoration:none" href="index.html">About</a><br />
                     </font> </td>
                   <td align="center" style="width: 20%;"> <font face="Helvetica, Arial, sans-serif">
-                      <a href="ode4j-features.html" style="color: #000000;text-decoration:none">Features</a><br />
+                      <a style="color: #000000;text-decoration:none" href="ode4j-features.html">Features</a><br />
                     </font> </td>
                   <td bgcolor="#FFFFFF" align="center" style="width: 20%;"><font
-                      face="Helvetica, Arial, sans-serif"><a href="ode4j-doc.html"
-                        style="color: #000000;text-decoration:none">Documentation</a><br />
+                      face="Helvetica, Arial, sans-serif"><a style="color: #000000;text-decoration:none"
+                        href="ode4j-doc.html">Documentation</a><br />
                     </font> </td>
                   <td align="center" style="width: 20%;"><font face="Helvetica, Arial, sans-serif"><a
-                        href="ode4j-download.html" style="color: #000000;text-decoration:none">Download</a><br />
+                        style="color: #000000;text-decoration:none" href="ode4j-download.html">Download</a><br />
                     </font> </td>
                   <td align="center" style="width: 20%;"><font face="Helvetica, Arial, sans-serif"><a
-                        href="ode4j-contact.html" style="color: #000000;text-decoration:none">Contact</a><br />
+                        style="color: #000000;text-decoration:none" href="ode4j-contact.html">Contact</a><br />
                     </font> </td>
                 </tr>
                 <tr style="background-color: #e0e0e0;">
-                  <td bgcolor="#FFFFFF" align="left" colspan="5" style="text-align: left;">
+                  <td bgcolor="#FFFFFF" align="left" style="text-align: left;" colspan="5">
                     <font face="Helvetica, Arial, sans-serif">
                       <h3>Documentation</h3>
                       <span style="font-weight: bold;">ode4j documentation</span><br />
@@ -59,25 +59,22 @@
                       The <a href="#mozTocId365970">demos</a> in the source
                       code provide good examples for many applications<br />
                       <a href="https://sourceforge.net/projects/ode4j/forums">Forums</a><br />
-                      <a href="https://sourceforge.net/pm/task.php?group_project_id=59343&amp;group_id=257951&amp;func=browse"
-                        target="_blank">Tasks</a><br />
-                      <a href="https://sourceforge.net/tracker/?func=browse&amp;group_id=257951&amp;atid=1141138"
-                        target="_blank">Bugs</a><br />
-                      <a href="https://lists.sourceforge.net/lists/listinfo/ode4j-users"
-                        target="_blank">Mailing List</a> (web interface). To
-                      join e-mail to <span style="text-decoration: underline;"
-                        class="moz-txt-link-abbreviated">ode4j-users-request@lists.sourceforge.net</span>
+                      <a target="_blank" href="https://sourceforge.net/pm/task.php?group_project_id=59343&amp;group_id=257951&amp;func=browse">Tasks</a><br />
+                      <a target="_blank" href="https://sourceforge.net/tracker/?func=browse&amp;group_id=257951&amp;atid=1141138">Bugs</a><br />
+                      <a target="_blank" href="https://lists.sourceforge.net/lists/listinfo/ode4j-users">Mailing
+                        List</a> (web interface). To join e-mail to <span class="moz-txt-link-abbreviated"
+                        style="text-decoration: underline;">ode4j-users-request@lists.sourceforge.net</span>
                       with the word 'info' in the header or in the body.<br />
                       <a href="#ProjectStructure">Code Structure</a><br />
                       <br />
                       <span style="font-weight: bold;">ODE documentation</span><br />
-                      <a target="_blank" href="http://www.ode.org/ode-docs.html">ODE
+                      <a href="http://www.ode.org/ode-docs.html" target="_blank">ODE
                         docs</a><br />
                       <a href="http://opende.sourceforge.net/wiki/index.php/Main_Page">ODE-Wiki</a><br />
-                      <a href="http://www.ode.org/community.html" target="_blank">ODE
+                      <a target="_blank" href="http://www.ode.org/community.html">ODE
                         community</a><br />
                       <br />
-                      <span style="font-weight: bold;">GIMPCAT</span><br />
+                      <span style="font-weight: bold;">GIMPACT</span><br />
                       <a href="http://gimpact.sourceforge.net/">Home</a><br />
                       <br />
                       <span style="font-weight: bold;">libccd</span><br />
