@@ -1,2 +1,2 @@
 ode4j
-0.12.0-j1.2
+0.12.0-j1.3
