@@ -9,6 +9,15 @@ the rules for this file:
 
 ------------------------------------------------------------------------------
 
+
+		   ******************************************************************
+2012-Jun-05 Tilmann Zaschke
+		* Release of ode4j-0.12.0-j1.3
+		   ******************************************************************
+
+2012-Jul-20 Tilmann Zaschke
+		* Fixed Exception/Memory leak when destroying objects.
+
 2012-Jul-11 Tilmann Zaschke
 		* Fixed NPE in DxGeom (dropping composite in DemoTrimesh)
 
